# winterland

./: .gitignore  LICENSE  PKGBUILD  README.md  main.py  pyproject.toml  requirements.txt
assets/: __init__.py  frostwall.desktop  wallpaper-manager.desktop  winterland.desktop
assets/styles/: dark.qss
backend/: __init__.py  favorites.py  focus_monitor.py  history.py  hyprland.py  hyprpaper.py  library.py  monitor.py  mpvpaper.py  playlist.py  wallpaper_manager.py
config/: __init__.py  default_config.json  settings.py
gui/: __init__.py  animations.py  main_window.py  preview_panel.py  settings_dialog.py  sidebar.py  theme.py  wallpaper_grid.py
gui/components/: __init__.py  context_menu.py  search_bar.py  thumbnail_card.py
utils/: __init__.py  file_utils.py  logger.py  notifications.py  thumbnailer.py  wallust_integration.py
wallpapers/: README.md
