[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frostwall"
version = "1.0.0"
description = "Minimalist wallpaper manager for Hyprland with dynamic theming"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Frostwall Team", email = "dev@example.com"}
]
keywords = ["hyprland", "wallpaper", "wayland", "arch-linux", "mpvpaper", "hyprpaper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment :: Window Managers",
]
dependencies = [
    "PySide6>=6.7.0",
    "Pillow>=10.3.0",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
frostwall = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gui*", "backend*", "config*", "utils*"]

[tool.setuptools.package-data]
"assets" = ["**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
